responsive file add

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsivo.css" />
     <title>Maratona Invertida</title>
   </head>
   <body>
@@ -25,22 +26,23 @@
       </section>
     </header>
     <main>
-      <div class="main_centro">
-        <nav class="main_nav">
-          <h3>Temporadas</h3>
-          <ul>
-            <li>Todas</li>
-            <li>Temporada 1</li>
-            <li>Temporada 2</li>
-            <li>Temporada 3</li>
-          </ul>
-        </nav>
+      <nav class="main_nav">
+        <h3>Temporadas</h3>
+        <ul>
+          <li>Todas</li>
+          <li>Temporada 1</li>
+          <li>Temporada 2</li>
+          <li>Temporada 3</li>
+        </ul>
+      </nav>
+      <div class="conteudo">
         <section class="main_vitrine"></section>
+
+        <aside class="main_playlist">
+          <h3>Fila de rerodução</h3>
+          <ul class="playlist_ul"></ul>
+        </aside>
       </div>
-      <aside class="main_playlist">
-        <h3>Fila de rerodução</h3>
-        <ul class="playlist_ul"></ul>
-      </aside>
     </main>
     <footer>
       <p>
