--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>Temporada 3</li>
         </ul>
       </nav>
-      <div class="conteudo">
+      <div class="contents">
         <section class="main_vitrine"></section>
 
         <aside class="main_playlist">
